today rates functionality

--- a/src/features/root/main-container.scss
+++ b/src/features/root/main-container.scss
@@ -1,21 +1,5 @@
 .main-container {
-
-}
-
-.table {
-  &__row {
-    display: flex;
-  }
-
-  &__id-column {
-    width: 20%;
-  }
-
-  &__name {
-    width: 30%;
-  }
-
-  &__is-open {
-    width: 30%;
-  }
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
