--- a/src/features/today-rates/today-rates.scss
+++ b/src/features/today-rates/today-rates.scss
@@ -3,4 +3,15 @@
   margin-left: 20px;
   border: 2px solid #3f51b5;
   height: 400px;
+
+  &__header {
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 48px;
+    line-height: 48px;
+    padding: 0 20px;
+    font-weight: 400;
+  }
 }
