--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,5 +40,19 @@ input::-ms-reveal {
   }
 }
 
+.ml-20 {
+  margin-left: 20px;
+}
 
+.df {
+  display: flex;
+}
+
+.jcc {
+  justify-content: center;
+}
+
+.aic {
+  align-items: center;
+}
 
